# speech_to_text

./: .gitignore  README.md  decoder.py  test.json  train.json
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/STTMalagasy/data_collector/: MalagasyDataCollector.py
backend/STTMalagasy/evaluation/: MalagasySTTTester.py
backend/STTMalagasy/features/: FeatureExtractor.py
backend/STTMalagasy/modele/: MalagasySTTModel.py
backend/STTMalagasy/pretraitement/: AudioPreprocessor.py
backend/app/: config.py  main.py  schemas.py
backend/app/routers/: health.py  transcription.py  websocket.py
backend/app/services/: realtime.py  transcription.py
backend/data_collector/: MalagasyDataCollector.py  download_malagasy_data.py
backend/entrainement/: train.py
backend/features/: FeatureExtractor.py
backend/modele/: MalagasySTTModel.py
backend/pretraitement/: AudioPreprocessor.py
backend/tests/: test_api.py
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json
malagasy_stt/: .gitignore  README.md  etape1_collecte_donnees.py  etape2_pretraitement_audio.py  etape3_extraction_features.py  etape4_modele.py  etape5_entrainement.py  etape6_test_evaluation.py  requirements.txt
mobile/: .gitignore  README.md  app.json  metro.config.js  package-lock.json  package.json  tsconfig.json
neuralnet/: dataset.py  model.py  train.py
pretrained/: aligne_audio_transcription.py  convert_to_wav.py  create_txt.py  mimic_create_jsons.py  pretrained.py
test/: decoder.py  engine.py
(+35 files in other folders)
