[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "speech-to-text"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]==0.32.1",
    "python-multipart==0.0.12",
    "SpeechRecognition==3.14.3",
    "pydub==0.25.1",
    "pydantic-settings==2.6.1",
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.27.2",
]

[tool.fastapi]
entrypoint = "app/main:app"

[tool.hatch.build.targets.wheel]
packages = ["app/main.py"]